objects/CONFIGURAZIONE_DOM__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Account_DOM__c</fullName>
        <label>Account DOM</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_DOM__c</fullName>
        <label>Data DOM</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Servizio_DOM__c</fullName>
        <label>Servizio DOM</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CONFIGURAZIONE DOM</label>
</CustomObject>